maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:2: error: Missing closing brace `}' assumed here
override def run() {
^IslandMaze:2: error: expected start of definition
override def run() {
         ^IslandMaze:28: error: expected class or object definition
def allerAuNord()
^IslandMaze:29: error: expected class or object definition
{while (getDirection() == Direction.NORTH && !estFaceMur())
^IslandMaze:35: error: expected class or object definition
def keepHandOnSideWall()
^IslandMaze:36: error: expected class or object definition
{gauche();
^