maze.island.IslandMaze.scala.code
override def run() {
  while (!estSurBiscuit)
  {while !(getDirection() == Direction.NORTH && !estFaceMur())
   {keepHandOnSideWall()};allerAuNord()
                    
  }                   
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
 prendBiscuit()                   
}






def allerAuNord()
{while (getDirection() == Direction.NORTH && !estFaceMur())
{avance()}}




def keepHandOnSideWall()
{gauche();
 if (estFaceMur())
 {droite();if (estFaceMur()) {droite(); if (estFaceMur()){droite()}}; avance()}
 else
 {avance()}